# babel

./: .gitignore  Babel Sequence Diagram0.asta  Babel client Class Diagram0.asta  Babel server Class Diagram0.asta  README.md
client/: client.sln
client/client/: Makefile  client.pro  client.vcxproj  client.vcxproj.filters  opus.lib  opusdebug.lib  portaudio_x64.lib  portaudio_x86.lib
client/client/include/: ClientGUI.h  ClientNetwork.h  IAudio.h  ICompression.h  IGUI.h  Protocol.h  QtClient.h  QtGUI.h  audio.h  clientGuiInfo.h  clientToClient.h  compression.h
client/client/src/: ClientGUI.cpp  ClientNetwork.cpp  QtClient.cpp  QtGUI.cpp  audio.cpp  clientToClient.cpp  compression.cpp  main.cpp
server/: CMakeLists.txt  file.txt
server/include/: Connect.h  ContactList.h  NetworkUser.h  Protocol.h  Server.h
server/src/: BabelServer.cpp  Connect.cpp  ContactList.cpp  NetworkUser.cpp  Server.cpp
